# fastr

./: .gitignore  Makefile  client.py  pyproject.toml  server.py  setup.py
fastr/: client.py  main.py  server.py  storage.py
fastr/proto_lib/: echo.py  echo_svc_pb2.py  echo_svc_pb2_grpc.py  example_pb2.py  hello.py  helloworld.proto  helloworld_pb2.py  helloworld_pb2_grpc.py
tests/: test_fastr.py
