[tool.poetry]
name = "fastr"
version = "0.1.0"
description = ""
authors = ["Victor Ng <victor@draper.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
lmdb = "^1.2.1"
betterproto = "^1.2.5"
Flask = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.23"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
