[tool.poetry]
name = "fastr"
version = "0.1.0"
description = ""
authors = ["Victor Ng <victor@draper.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
lmdb = "^1.2.1"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
Flask = "^2.0.0"
google-cloud-storage = "^1.38.0"
grpclib = "^0.4.1"
grpcio-tools = "^1.37.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.23"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
